Update #6. 템플릿 파라미터.md

--- a/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
+++ b/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
@@ -321,9 +321,9 @@ int main() {
 
 <br/>
 
-> x paramerter 121
-> cx paramerter 121
-> rx paramerter 121
+> x paramerter 121 <br/>
+> cx paramerter 121 <br/>
+> rx paramerter 121 <br/>
 
 <br/>
 
@@ -356,9 +356,9 @@ int main() {
 
 <br/>
 
-> x paramerter 121
-> cx paramerter 121
-> rx paramerter 121
+> x paramerter 121 <br/> 
+> cx paramerter 121 <br/>
+> rx paramerter 121 <br/>
 
 <br/>
 
@@ -407,3 +407,170 @@ foo(rx);		// T : const int, parameter Type : const int&
 
 <br/>
 <br/>
+
+레퍼런스 파라미터 사용 시 const와 레퍼런스가 전달 되는지 살펴보자. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T>
+int square(T& r){
+	r = r + 1;
+	return r * r;
+}
+
+int main() {
+	int x = 10;
+	const int cx = x;
+	
+	cout << "x paramerter " << square(x) << endl;
+	cout << "cx paramerter " << square(cx) << endl;
+
+	return 0;
+}
+```
+
+<br/>
+
+> Compile Error
+
+<br/>
+
+const 속성이 그대로 전달되어 변수 변경 시 컴파일 에러를 발생 시킨다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T>
+int square(T& r){
+	r = 11;
+	return r * r;
+}
+
+int main() {
+	int x = 10;
+	const int& rx = x;
+	
+	cout << "x paramerter " << square(x) << endl;
+	cout << "rx paramerter " << square(rx) << endl;
+
+	return 0;
+}
+```
+
+<br/>
+
+> Compile Error
+
+<br/>
+
+reference 속성이 그대로 전달되어 레퍼런스 재할당으로 컴파일 에러를 발생 시킨다. <br/>
+
+<br/>
+<br/>
+
+### 2-3) Parameter를 T&&로 선언한 경우
+
+<br/>
+
+```c++
+template <typename T>
+void foo(T&& parameter);
+
+foo(variable);
+```
+
+<br/>
+
+이 경우 템플릿 파라미터 추론 과정에서 T&&는 우측값 레퍼런스나 좌측값 레퍼런스 중 하나를 사용한다. <br/>
+
+<br/>
+
+__우측값 참조 (R-value Reference)__
+
+<br/>
+
+앞서 언급 했듯이, &&를 사용하면 해당 변수는 우측값 참조 변수가 된다. <br/>
+
+<br/>
+
+```c++
+int main() {
+	int x = 10;
+	int& l_ref = x;		// 참조 가능
+	int& l_ref = 10;	// Error (10은 우측 값)
+	
+	int&& r_ref = x;	// Error (x는 좌측 값)
+	int&& r_ref = 10;	// 참조 가능
+}
+```
+
+<br/>
+
+__보편 참조 (Universal Reference)__
+
+<br/>
+
+위 상황 처럼 템플릿 파라미터를 T&&로 선언하게 되면 보편 참조가 된다.<br/>
+이 경우, 입력 받는 변수에 따라 좌측 값 변수를 할지, 우측 값 변수를 할당할 지 결정된다. <br/>
+
+<br/>
+
+```
+#include <iostream>
+using namespace std;
+
+template <typename T>
+int square(T&& r){
+	r = r + 1;
+	return r * r;
+}
+
+int main() {
+	int x = 10;
+	int& l_ref = x;
+	int&& r_ref = 10;
+	
+	cout << "x paramerter " << square(x) << endl;
+	cout << "x = " << x << endl;
+	cout << "l_ref paramerter " << square(l_ref) << endl;
+	cout << "x = " << x << endl;
+	cout << "r_ref paramerter " << square(r_ref) << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+> x paramerter 121 <br/>
+> x = 11 <br/>
+> l_ref paramerter 144 <br/>
+> x = 12 <br/>
+> r_ref paramerter 121 <br/>
+
+<br/>
+
+1. 첫번째 함수에선 x를 그대로 넣었으므로 별다른 참조 없이 x값을 기대로 입력했다.<br/>
+int& r = x를 참조하여 r = r + 1 에 의해 x도 11이 커지게 된다. (x = 11) <br/>
+
+<br/>
+
+2. 두번째 함수에선 좌측값 변수 'l_ref'를 입력해 좌측값 레퍼런스가 사용된다. <br/>
+l_ref 에 할당된 변수가 x 이므로, r = r + 1 이후에 x는 또 1이 커지게 된다. (x = 12) <br/>
+
+<br/>
+
+3. 세번째 함수에선 우측값 변수 'r_ref'를 입력해 우측값 레퍼런스가 사용된다. <br/>
+참조 변수가 사용되지 않았으므로, x에는 별다른 변화는 없다. <br/>
+
+<br/>
+
+즉, T&&로 선언시 상황에 따라 컴파일러는 우측값, 좌측값 변수 중 앎맞은 방식을 채택한다. <br/>
+이를 보편 참조 (Universal Reference)라 한다.<br/>
