Update #7. 파일 입출력.md

--- a/2. 제네릭 프로그래밍/#7. 파일 입출력.md
+++ b/2. 제네릭 프로그래밍/#7. 파일 입출력.md
@@ -24,5 +24,46 @@ __파일 입출력__
 - fstream 라이브러리에 정의된 ifstream(input file stream), ofstream(output file stream) 클래스 객체 사용<br/>
 
 <br/>
+<br/>
 
+## 파일 입출력 예제
 
+<br/>
+
+다음은 infile.txt 파일로 부터 정수를 읽어 두 배값을 계산해 outfile.txt에 기록하는 프로그램이다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <fstream>
+using namespace std;
+
+int main() {
+	ifstream input_file;					// ifstream 객체 선언
+	input_file.open("infile.txt");			// 파일 열기
+	if(!input_file.is_open()){
+		cout << "input file could not be opened!" << endl;
+		return 1;
+	}
+	
+	ofstream output_file("outfile.txt");	// ofstream 객체 선언
+	if(!output_file.is_open()){				
+		cout << "output file could not be opened!" << endl;
+		return 1;
+	}
+	
+	int datum;
+	while (input_file >> datum) {
+		output_file << datum * 2 << endl;
+	}
+	
+	input_file.close();
+	output_file.close();
+	cout << "Done!!" << endl;
+	
+	return 0;
+}
+```
+
+<br/>
