--- a/3. 객체 지향 프로그래밍/#1. 클래스.md
+++ b/3. 객체 지향 프로그래밍/#1. 클래스.md
@@ -4,11 +4,11 @@
 <br/>
 <br/>
 
-## 1-1. 객체지향 프로그래밍 개요
+## 1) 객체지향 프로그래밍 개요
 
 <br/>
 
-### 객체지향 프로그래밍 (OOP, Object-Oriented Programming)
+### 1-1) 객체지향 프로그래밍 (OOP, Object-Oriented Programming)
 
 <br/>
 
@@ -28,6 +28,242 @@ __객체지향 프로그래밍의 특징__ <br/>
 
 <br/>
 
-### 클래스(Class) 란? 
+### 1-2) 클래스(Class) 란? 
 
 <br/>
+
+객체지향 프로그래밍에서 특정 객체를 생성하기 위해 메소드와 변수를 정의하는 일종의 틀 <br/>
+C++ 구조체와 달리 멤버로 함수를 포함할 수 있는 확정된 의미의 객체<br/>
+
+<br/>
+
+### 1-3) C++ 구조체 (Sturcture) 
+
+<br/>
+
+구조체는 내부에 메소드를 가질 수 없다.<br/>
+만약, 구조체를 파라미터로 사용하는 메소드를 만들고 싶다면 별도로 선언해야 한다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define ID_LEN      20
+#define MAX_GAUGE   20
+
+struct Car{
+	char name[ID_LEN];
+	int fuelGauge;
+};
+
+void In_Gauge(Car& car){
+	car.fuelGauge = MAX_GAUGE;
+	
+}
+
+int main() {
+	
+	Car car1 = {"TIGUAN", 5};
+	In_Gauge(car1);
+	
+	cout << car1.fuelGauge << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+> 20
+
+<br/>
+<br/>
+
+## 2) C++ 클래스 선언 (Class Declaration) 
+
+<br/>
+<br/>
+
+객체지향 프로그래밍의 특징 중 하나라 추상화(Abstraction)를 사용자 정의 타입으로 구현 <br/>
+"Class" 키워드를 사용해 선언한다. <br/>
+
+<br/>
+
+__클래스 선언__
+
+<br/>
+
+
+> class 클래스이름 <br/>
+> { <br/>
+>   접근제어 지시자1: <br/>
+>    멤버변수1의 타입 이름; <br/>
+>    멤버변수2의 타입 이름; <br/>
+>    ...   <br/>
+>    멤버변수1의 원형 <br/>
+>    멤버변수2의 원형 <br/>
+>    ... <br/>
+> }; <br/>
+
+<br/>
+
+이를 이용해 C++ 클래스를 만들면 다음과 같이 만들 수 있다. <br/>
+각각의 의미는 아래 다시 설명하겠다. <br/>
+
+<br/>
+
+``` c++
+class Car
+{
+
+  private:
+    // 멤버 상수
+    enum
+    {
+        ID_LEN = 20,
+        MAX_SPD = 200,
+        FUEL_STEP = 2,
+        ACC_STEP = 10,
+        BRK_STEP = 10
+    };
+    // 멤버 변수
+    char gamerID[ID_LEN];
+    int fuelGauge;
+    int curSpeed;
+  public:
+    // 멤버 함수
+    void InitMembers(const char* ID, int fuel);
+    void ShowCarState();
+    void Accel();
+    void Break();
+};
+```
+
+<br/>
+
+여기서 Private과 Public은 제어 지시자다. <br/>
+
+<br/>
+
+위에서 확인해보면 멤버 함수명은 정의되어 있지만, 함수의 내용은 담겨있지 않다. <br/>
+따라서, 메소드를 실행을 위해선 아래 별도로 정의해야 한다. <br/>
+
+<br/>
+
+```c++
+void Car::ShowCarState()
+{
+    cout << "소유자 ID: " << gamerID << endl;
+    cout << "연료량: " << fuelGauge << "%" << endl;
+    cout << "현재 속도: " << curSpeed << "km/h" << endl << endl;
+}
+```
+
+<br/>
+
+클래스는 위와 같은 구조로 만들 수 있다.<br/>
+이제 객체지향 프로그래밍의 다섯가지 특징에 따라 클래스가 어떻게 응용 되는지 살펴보자. <br/>
+
+<br/>
+
+아래는 위의 객체에 대한 전체 예시다.<br/>
+
+```c++
+#include <iostream>
+#include <cstring>
+
+
+using namespace std;
+
+class Car
+{
+
+private:
+    // 멤버 상수
+    enum
+    {
+        ID_LEN = 20,
+        MAX_SPD = 200,
+        FUEL_STEP = 2,
+        ACC_STEP = 10,
+        BRK_STEP = 10
+    };
+    // 맴버 변수
+    char gamerID[ID_LEN];
+    int fuelGauge;
+    int curSpeed;
+public:
+    // 맴버 함수
+    void InitMembers(const char* ID, int fuel);
+    void ShowCarState();
+    void Accel();
+    void Break();
+};
+
+void Car::InitMembers(const char* ID, int fuel)
+{
+    strcpy_s(gamerID, ID);  // strcpy는 안전하지 않은 함수이므로 strcpy_s 사용
+    fuelGauge = fuel;
+    curSpeed = 0;
+}
+
+void Car::ShowCarState()
+{
+    cout << "소유자 ID: " << gamerID << endl;
+    cout << "연료량: " << fuelGauge << "%" << endl;
+    cout << "현재 속도: " << curSpeed << "km/h" << endl << endl;
+}
+
+void Car::Accel()
+{
+    if (fuelGauge <= 0)
+        return;
+    else
+        fuelGauge -= FUEL_STEP;
+
+    if (curSpeed + ACC_STEP >= MAX_SPD)
+    {
+        curSpeed = MAX_SPD;
+        return;
+    }
+    curSpeed += ACC_STEP;
+}
+
+void Car::Break()
+{
+    if (curSpeed < BRK_STEP)
+    {
+        curSpeed = 0;
+        return;
+    }
+    curSpeed -= BRK_STEP;
+}
+
+
+
+int main(void)
+{
+    Car run99;  // 클래스 Car의 객체 run99
+    run99.InitMembers("run99", 100);  // 클래스는 선언과 초기화를 분리해야 함
+    run99.Accel(); // run99의 맴버 함수
+    run99.Accel();
+    run99.ShowCarState();
+    run99.Break();
+    run99.ShowCarState();
+
+    Car sped77;  // 클래스 Car의 객체 sped77
+    sped77.InitMembers("sped77", 100);
+    sped77.Accel();  // sped77의 맴버 함수
+    sped77.Break();
+    sped77.ShowCarState();
+
+    system("pause");  // VC++ 에서만 필요
+
+    return 0;
+}
+```
+
