--- a/3. 객체 지향 프로그래밍/#1. 클래스.md
+++ b/3. 객체 지향 프로그래밍/#1. 클래스.md
@@ -100,13 +100,13 @@ __클래스 선언__
 
 > class 클래스이름 <br/>
 > { <br/>
-> &nbsp;접근제어 지시자1: <br/>
-> &nbsp;&nbsp;멤버변수1의 타입 이름; <br/>
-> &nbsp;&nbsp;멤버변수2의 타입 이름; <br/>
-> &nbsp;&nbsp;...   <br/>
-> &nbsp;&nbsp;멤버변수1의 원형 <br/>
-> &nbsp;&nbsp;멤버변수2의 원형 <br/>
-> &nbsp;&nbsp;... <br/>
+> &nbsp;&nbsp;&nbsp;접근제어 지시자1: <br/>
+> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;멤버변수1의 타입 이름; <br/>
+> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;멤버변수2의 타입 이름; <br/>
+> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...   <br/>
+> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;멤버변수1의 원형 <br/>
+> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;멤버변수2의 원형 <br/>
+> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;... <br/>
 > }; <br/>
 
 <br/>
