--- a/3. 객체 지향 프로그래밍/#2. 추상화.md
+++ b/3. 객체 지향 프로그래밍/#2. 추상화.md
@@ -423,6 +423,164 @@ __출력 결과__
 ### 2-3) this 포인터
 
 <br/>
+
+클래스의 멤버 함수를 호출하는 상황을 가정해보자. <br/>
+우선 우리는 객체 타입을 활용한 인스턴스를 생성하고, 인스턴스를 활용하여 클래스의 멤버 함수를 호출 한다. <br/>
+이때, 컴파일러는 호출된 멤버 함수의 인스턴스가 어떤 것인지 찾을 수 있어야 한다. <br/>
+
+<br/>
+
+위 말이 이해가 되지 않는 다면 아래 예제를 살펴보자 <br/>
+
+<br/>
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class Employee
+{
+
+private:
+	int id;
+	
+public:
+	void setID(int value);
+	int getID();
+};
+
+void Employee::setID(int value){
+	id = value;
+}
+
+int Employee::getID(){
+	return id;
+}
+
+int main() {
+	Employee employee;
+	employee.setID(20);
+	cout << employee.getID() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 20 <br/>
+
+<br/>
+
+Employee 클래스에는 private 변수 "id"가 존재한다.<br/>
+그리고 2개의 멤버 함수인 void setID(int value)와 int getID()가 존재한다. <br/>
+
+<br/>
+
+main 함수를 통해서 Employee 객체의 인스턴스 "employee"를 선언했다. <br/>
+그리고 employee.setID(20)을 통해 employee 인스턴스에 접근한다. <br/>
+이 경우 employee 인스턴스에 대한 주소 값을 setID 함수에서 알고 있어야 접근 가능할 것이다. <br/>
+
+<br/>
+
+보통 인스턴스의 주소값은 암시적으로 컴파일러가 사용하는데, 이를 명시적으로 사용하는 키워드가 this이다.<br/>
+
+<br/>
+
+예를 들어, setID의 구조와 호출 방법은 다음과 같다.<br/>
+
+<br/>
+<br/>
+
+__1) 암시적 this__ <br/>
+
+<br/>
+
+```c++
+// 멤버 함수 선언
+void Employee::setID(int value){
+	id = value;
+}
+
+// 멤버 함수 호출
+	Employee employee;
+	employee.setID(20);
+```
+
+<br/>
+
+실제로 컴파일러가 인식하는 방식은 아래와 같다.<br/>
+
+<br/>
+
+__2) 명시적 this__ <br/>
+
+<br/>
+
+```c++
+// 멤버 함수 선언
+void Employee::setID(Employee* const this, int value){
+	this->id = value;
+}
+
+// 멤버 함수 호출
+	Employee employee;
+	employee.setID(&simple, 20);
+```
+
+<br/>
+<br/>
+
+이 방식을 요약하자면, 컴파일러는 다음의 과정으로 수행된다.<br/>
+
+<br/>
+
+1. employee.setID(20)을 호출하면 실제로 employee.setID(&employee, 20)으로 변환한다. <br/>
+2. setID() 멤버 함수 내부의 'this' 포인터는 simple 객체의 주소를 가리킨다. <br/>
+3. setID() 내부의 모든 멤버 변수 앞에는 this->가 붙게 된다. <br/>
+
+<br/>
+
+this를 명시적으로 참조해야하는 경우도 존재한다. <br/>
+
+<br/>
+
+__1. 멤버 변수의 이름과 매개 변수의 이름이 동일한 경우__ <br/>
+
+<br/>
+
+```c++
+void Employee::setID(int id){
+	this->id = id;
+}
+```
+
+<br/>
+
+위 처럼 매개변수 (int id)가 변수명 id와 같을 때, this를 사용하여 구분 한다. <br/>
+
+<br/>
+
+__2. 멤버 변수 체이닝 기법__ <br/>
+
+<br/>
+
+<br/>
+<br/>
+
+__this 포인터의 특징__
+
+<br/>
+
+1. this 포인터는 클래스, 구조체 또는 열거체 타입의 비정적 멤버 함수에서만 사용할 수 있다. <br/>
+2. 정적(static) 멤버 함수는 this 포인터를 가지지 않는다. <br/>
+3. this 포인터는 언제나 포인터 상수이며, 값을 재할당 할 수 없다. <br/>
+
 <br/>
 <br/>
 
