--- a/3. 객체 지향 프로그래밍/#2. 추상화.md
+++ b/3. 객체 지향 프로그래밍/#2. 추상화.md
@@ -570,6 +570,101 @@ __2. 멤버 변수 체이닝 기법__ <br/>
 
 <br/>
 
+멤버 변수 체이닝이란, 작업을 하고 있는 인스턴스를 반환하여 여러 멤버 함수를 연속해서 호출하는 기법이다. <br/>
+아래의 예시를 살펴보자. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class Calculator
+{
+	private:
+		int value = 0;
+		
+	public:
+		void add(int value){
+			this->value += value;
+		}
+		void sub(int value){
+			this->value -= value;
+		}
+		void multi(int value){
+			this->value *= value;
+		}
+		int getValue() {return value;}
+	
+};
+
+int main() {
+	
+	Calculator a;
+	
+	a.add(10);
+	a.multi(3);
+	a.sub(1);
+	
+	cout << a.getValue() << endl;
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__ 
+
+<br/>
+
+> 29 <br/>
+
+<br/>
+
+처음에 만든 a 인스턴스에는 value가 0이고, 각각의 멤버 변수에서 this 키워드를 사용해 value 값을 변환한다. <br/>
+
+<br/>
+
+1. add(10) : value = 10 <br/>
+2. multi(3) :  value = 10 * 3 = 30 <br/>
+3. sub(1) : value = 30 - 1 = 29 <br/>
+
+<br/>
+
+이때, 멤버 함수를 다음과 같이 바꿔보자. <br/>
+
+<br/>
+
+```c++
+class Calculator
+{
+	private:
+		int value = 0;
+		
+	public:
+		Calculator& add(int value){
+			this->value += value;
+			return *this;
+		}
+		Calculator& sub(int value){
+			this->value -= value;
+			return *this;
+		}
+		Calculator& multi(int value){
+			this->value *= value;
+			return *this;
+		}
+		int getValue() {return value;}
+	
+};
+```
+
+<br/>
+
+바뀐 부분은 멤버 함수의 반환이 void -> Calculator& 로 바뀌었다. 즉, Calculator 객체의 주소값을 반환한다. <br/>
+그리고, 바뀐 반환에 맞게 return 값을 입력하자.<br/>
+Calculator 객체의 주소값이므로, '*' this이다. <br/>
+
 <br/>
 <br/>
 
