--- a/3. 객체 지향 프로그래밍/#2. 추상화.md
+++ b/3. 객체 지향 프로그래밍/#2. 추상화.md
@@ -666,6 +666,26 @@ class Calculator
 Calculator 객체의 주소값이므로, '*' this이다. <br/>
 
 <br/>
+
+그리고 main 함수에서는 아래와 같이 함수를 호출한다. <br/>
+
+<br/>
+
+```c++
+int main() {
+	
+	Calculator a;
+	
+	a.add(10);
+	a.multi(3);
+	a.sub(1);
+	
+	cout << a.getValue() << endl;
+	return 0;
+}
+```
+
+<br/>
 <br/>
 
 __this 포인터의 특징__
