--- a/3. 객체 지향 프로그래밍/#2. 추상화.md
+++ b/3. 객체 지향 프로그래밍/#2. 추상화.md
@@ -702,3 +702,286 @@ __this 포인터의 특징__
 ## 2) 생성자와 소멸자
 
 <br/>
+
+### 2-1) 생성자 (Constructor)
+
+<br/>
+
+생성자는 객체를 선언과 동시에 멤버 변수를 지정해 인스턴스를 만들게 해준다.<br/>
+
+<br/>
+
+생성자를 사용해 객체를 선언하는 경우 2가지 장점이 있다.<br/>
+
+<br/>
+
+1. 객체에 대한 인스턴스 동적 할당과 멤버 변수의 초기화를 동시에 진행할 수 있다.<br/>
+2. 객체에 필수로 선언해야하는 멤버 변수를 지정해줄 수 있다.<br/>
+
+<br/>
+
+```c++
+class normalClass
+{
+    private:
+        int num1;
+	int num2;
+    
+    public:
+        normalClass(int n1, int n2)  // 생성자
+	{
+	    num1 = n1;
+	    num2 = n2;
+	}
+
+}
+
+int main(){
+    normalClass class = normalClass(10, 20);	// 생성자를 활용한 객체 생성 
+}
+```
+
+<br/>
+
+객체 생성자는 반드시 객체의 이름과 동일해야 한다.<br/>
+또한 생성자를 통하여 필수 입력 멤버 변수를 정의할 수 있고, private 변수에 접근할 수 있도록 한다.<br/>
+
+<br/>
+
+__생성자 오버로딩 (Constructor Overloading)__<br/>
+
+<br/>
+
+생성자는 오버로딩하여 선언 가능하다. <br/>
+생성자에 파라미터에 따라 생성자가 결정된다.<br/>
+
+<br/>
+
+아래 예제는 오버로딩된 생성자를 통해서 객체를 선언하는 방법이다. <br/>
+
+<br/>
+
+```c++
+class normalClass
+{
+    private:
+        int num1;
+	int num2;
+    
+    public:
+        normalClass()  // 생성자 1
+	{
+	    num1 = 0;
+	    num2 = 0;
+	}
+	normalClass(int n1)  // 생성자 2
+	{
+	    num1 = n1;
+	    num2 = 0;
+	}
+        normalClass(int n1, int n2)  // 생성자 3
+	{
+	    num1 = n1;
+	    num2 = n2;
+	}
+
+}
+
+int main(){
+    normalClass class1 = normalClass();		// 생성자 1 사용 (num1 = 0, num2 = 0) 
+    normalClass class2 = normalClass(10);    	// 생성자 2 사용 (num1 = 10, num2 = 0)
+    normalClass class3 = normalClass(10, 20);	// 생성자 3 사용 (num1 = 10, num2 = 20)
+}
+```
+
+<br/>
+<br/>
+
+__기본 생성자(Default Constructor)__
+
+<br/>
+
+만약 객체 내에서 별도의 생성자를 선언하지 않았다면, 기본 생성자가 선언된다.<br/>
+기본 생성자에는 별도의 파라미터가 없으며 모든 멤버 변수는 null, 0으로 초기화된다.<br/>
+
+<br/>
+
+```c++
+class normalClass
+{
+    private:
+        int num1;
+	int num2;
+    
+    public:
+        // 생성자 선언 없음
+	void show(){
+	    cout << num1 << ", " << num2 << endl; 
+	}
+
+}
+
+int main(){
+    normalClass class1 = normalClass();		// 기본 생성자 사용 (num1 = 0, num2 = 0) 
+    class.show()
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 0 , 0
+
+<br/>
+<br/>
+
+__복사 생성자 (Copy Constructor)__
+
+<br/>
+
+복사 생성자는 다른 인스턴스와 동일하게 멤버 변수를 세팅하고 싶을 때 사용한다.<br/>
+동일한 멤버 변수를 그대로 복사하므로, 이후 동작은 개별적으로 수행된다.<br/>
+
+<br/>
+
+복사 생성자의 경우 인스턴스의 주소값을 파라미터로 사용한다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class normalClass
+{
+    private:
+        int num1;
+	    int num2;
+    
+    public:
+        // 일반 생성자
+        normalClass(int num1, int num2)
+        {
+        	this->num1 = num1;
+        	this->num2 = num2;
+        }
+        // 복사 생성자
+        normalClass(const normalClass& a)
+        {
+        	this->num1 = a.num1;
+        	this->num2 = a.num2;
+        }
+        
+		void show(){
+	    	cout << num1 << ", " << num2 << endl; 
+		}
+		void init(){
+			num1 = 0; num2 = 0;
+		}
+};
+
+int main(){
+    normalClass class1 = normalClass(10, 20);
+    class1.show();
+    normalClass class2 = normalClass(class1);
+    class1.show();
+    class2.show();
+    class2.init();
+    class1.show();
+    class2.show();
+
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 10, 20 <br/>
+> 10, 20 <br/>
+> 10, 20 <br/>
+> 10, 20 <br/>
+> 0, 0 <br/>
+
+<br/>
+<br/>
+
+### 2-2) 소멸자 (Destructor)
+
+<br/>
+
+인스턴스를 제거할 떄 사용한다. <br/>
+객체가 범위를 벗어나거나 메모리 확보를 위해서 명시적으로 인스턴스를 제거해야하는 경우 호출한다.<br/>
+보통의 경우, 직접 선언하지 않고 명시적으로 삭제 된다. <br/>
+
+<br/>
+
+소멸자는 아래의 규칙을 따른다. <br/>
+
+<br/>
+
+1. 스코프를 벗어나게 되면 암시적으로 사용된다. <br/>
+2. 객체를 동적할당 한 경우에만 수행된다. <br/>
+3. 소멸자의 이름은 반드시 객체의 이름과 동일해야 하며 ~키워드를 사용한다. <br/>
+4. 소멸자는 인수와 반환값이 없다.<br/>
+
+<br/>
+
+```
+#include <iostream>
+using namespace std;
+
+class normalClass
+{
+    private:
+        int num1;
+	    int num2;
+    
+    public:
+        // 생성자
+        normalClass(int num1, int num2)
+        {
+        	this->num1 = num1;
+        	this->num2 = num2;
+        }
+        // 소멸자
+        ~normalClass()
+        {
+        	cout << "delete class " << endl; 
+        }
+        
+		void show(){
+	    	cout << num1 << ", " << num2 << endl; 
+		}
+		void init(){
+			num1 = 0; num2 = 0;
+		}
+};
+
+int main(){
+    normalClass class1 = normalClass(10, 20);
+    class1.show();
+}
+```
+
+<br/>
+
+__출력 결과__
+
+> 10, 20 <br/>
+> delete class <br/>
+
+<br/>
+
+위 경우는 객체가 소멸 될 떄 'delete class' 텍스트를 출력하게 선언했고, 암시적으로 생성자가 수행되었다.<br/>
+
+<br/>
+
+소멸자의 경우 프로그래머는 크게 상관하지 않아도 된다. <br/>
+하지만, 리소스 관리와 강력한 프로그래밍을 위해서 반드시 알아두고 있어야할 개념이다. <br/>
+소멸자의 발생 매커니즘을 이해한다면 좀 더 안전한 프로그래밍이 가능해진다. <br/>
