--- a/3. 객체 지향 프로그래밍/#2. 추상화.md
+++ b/3. 객체 지향 프로그래밍/#2. 추상화.md
@@ -885,13 +885,13 @@ class normalClass
 
 int main(){
     normalClass class1 = normalClass(10, 20);
-    class1.show();
+    class1.show();	// 10, 20
     normalClass class2 = normalClass(class1);
-    class1.show();
-    class2.show();
+    class1.show();	// 10, 20
+    class2.show();	// 10, 20
     class2.init();
-    class1.show();
-    class2.show();
+    class1.show();	// 10, 20
+    class2.show();	// 0, 0
 
 }
 ```
@@ -932,7 +932,7 @@ __출력 결과__
 
 <br/>
 
-```
+```c++
 #include <iostream>
 using namespace std;
 
