--- a/3. 객체 지향 프로그래밍/#3. 캡슐화.md
+++ b/3. 객체 지향 프로그래밍/#3. 캡슐화.md
@@ -274,6 +274,156 @@ __출력 결과__
 ### 2-1) Friend
 
 <br/>
+
+클래스에 friend 선언을 하면 직접 private 멤버로 접근 가능하다. <br/>
+C++에서만 지원하는 기능으로, private 멤버에 특정 개체만 접급을 허용하고 싶을 떄 선언한다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class A{
+	friend class B;
+	private:
+		int a_value;
+		
+	public:
+	    void set_a(int a){
+	    	this->a_value = a;
+	    }
+};
+
+class B{
+	private:
+		int b_value;
+	public:
+	    void set_b(int b){
+	    	this->b_value = b;
+	    }
+	    int get_a(A& a){
+	    	return a.a_value;
+	    }
+};
+
+int main() {
+	A a;
+	B b;
+	
+	a.set_a(1);
+	b.set_b(2);
+	
+	cout << b.get_a(a) << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 1
+
+<br/>
+
+friend class B 키워드가 없었다면, b.get_a(a)의 함수는 a의 private 멤버 변수인 a_value에 접근하므로 컴파일 에러가 발생한다. <br/> 
+
+<br/>
+
+하지만, friend 키워드를 사용해 B클래스에서 A private 멤버로 접근이 가능하게 선언한다. <br/>
+
+<br/>
+
+__Friend 함수__
+
+<br/>
+
+friend 키워드를 활용해 특정 함수만 접근 가능하도록 선언할 수도 있다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class B;
+
+class A{
+	public:
+		int a_value;
+		void set_a(int a){
+			this->a_value = a;
+		};
+		void a_add(B& b);
+		int get_a(){
+	    	return a_value;
+	    }
+
+};
+
+class B{
+	private:
+		int b_value;
+		
+	public:
+	    void set_b(int b){
+	    	this->b_value = b;
+	    }
+	    friend void A::a_add(B& b);
+};
+
+void A::a_add(B& b){
+   	this->a_value += b.b_value;
+}
+
+int main() {
+	A a;
+	B b;
+	
+	a.set_a(1);
+	b.set_b(2);
+	a.a_add(b);
+	
+	cout << a.get_a() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+> 3
+
+<br/>
+
+위 예제에서 A와 B 클래스는 각각 a_value와 b_value를 가지고 있다. <br/>
+main 함수를 통해서 a_value = 1, b_value = 2로 세팅했다.<br/>
+
+<br/>
+
+그 다음 A 클래스에 값을 더하기 위해 함수를 선언한다. <br/>
+
+<br/>
+
+```c++
+void A::a_add(B& b){
+   	this->a_value += b.b_value;
+}
+```
+
+<br/>
+
+이 함수는 B클래스의 값(b_value)을 가져와서 A클래스의 값에 더해준다. <br/>
+A클래스의 값을 더하기 위해 B의 값에 접근한다. <br/>
+이를 위해서 A::a_add(B& b) 함수를 B 클래스에 friend로 선언한다. <br/>
+
+<br/>
 <br/>
 
 ### 2-2) Static
