--- a/3. 객체 지향 프로그래밍/#3. 캡슐화.md
+++ b/3. 객체 지향 프로그래밍/#3. 캡슐화.md
@@ -429,6 +429,101 @@ A클래스의 값을 더하기 위해 B의 값에 접근한다. <br/>
 ### 2-2) Static
 
 <br/>
+
+__1. 함수 내에 선언된 Static (정적 변수)__
+
+<br/>
+
+함수 내에 static이 선언되었다면 이는 정적 변수로 선언 된 것이다.
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+void Counter()
+{
+    int cnt; 
+    cnt++;
+    cout << "cnt = " << cnt << endl;
+
+}
+
+
+int main(void)
+{
+    for (int i = 0; i < 3; i++)
+    {
+        Counter();
+    }
+
+    return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> cnt = 1 <br/>
+> cnt = 1 <br/>
+> cnt = 1 <br/>
+
+<br/>
+
+기본적으로 변수는 스코프 안에서만 활성화 되기 때문에 함수가 종료되면 초기화된다.<br/>
+
+<br/>
+
+Counter 함수에 있는 변수를 static으로 선언하면 결과는 다음과 같다. <br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+void Counter()
+{
+    static int cnt; 
+    cnt++;
+    cout << "cnt = " << cnt << endl;
+
+}
+
+
+int main(void)
+{
+    for (int i = 0; i < 3; i++)
+    {
+        Counter();
+    }
+
+    return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> cnt = 1 <br/>
+> cnt = 2 <br/>
+> cnt = 3 <br/>
+
+<br/>
+<br/>
+
+__2. 내부링크로 사용된 Static (내부 전역 변수)__
+
+<br/>
+
+
+
+<br/>
 <br/>
 
 ### 2-3) Const
