--- a/3. 객체 지향 프로그래밍/#3. 캡슐화.md
+++ b/3. 객체 지향 프로그래밍/#3. 캡슐화.md
@@ -1,4 +1,4 @@
-# 3. 추상화
+# 3. 캡슐화
 
 <br/>
 <br/>
@@ -521,7 +521,135 @@ __2. 내부링크로 사용된 Static (내부 전역 변수)__
 
 <br/>
 
+static은 내부 전역 변수로서 선언이 가능하다. <br/>
+이 경우 static으로 선언된 변수가 있는 파일 어디에서나 접근이 가능하다. <br/>
+단 이 파일이 아닌 다른 파일 소스에서 해당 변수에 접근은 불가능하다.<br/>
 
+```c++
+static int internal_variable;
+
+int main() { 
+    return 0; 
+}
+```
+
+<br/>
+
+이 경우 static으로 선언된 internal_variable은 이 변수가 존재하는 파일 어디에서나 접근 가능하다. <br/>
+
+<br/>
+<br/>
+
+__3. 멤버 변수로 사용된 Static (멤버 전역 변수)__
+
+<br/>
+
+클래스의 멤버 변수로서 static 을 사용할 수도 있다. <br/>
+이 경우 멤버 변수와 동일하게 선언하면 되고, 여러 클래스가 만들어 져도 하나의 변수만 사용하게 된다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class A{
+	private:
+		static int a_value;
+		
+	public:
+		A(int a_value){
+			this->a_value = a_value;
+		}
+	
+		int getA(){
+			return a_value;
+		}
+};
+
+int A::a_value = 0;	// static 멤버 변수의 초기화는 main 외부에서 한다.
+
+int main() {
+
+	A a1 = A(3);
+	A a2 = A(6);
+	
+	cout << a1.getA() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 6
+
+<br/>
+
+a1의 a_value를 처음에 3이라고 선언했지만, a2 선언에서 a_value를 6으로 바꿨는데, <br/>
+해당 변수가 전역 멤버 변수라 a1에 있는 a_value 역시 6으로 바꼈다.  <br/>
+
+<br/>
+<br/>
+
+__4. static 멤버 함수__
+
+<br/>
+
+static 멤버 함수도 static 멤버 변수와 마찬가지로 클래스 외부에서 공유된다. <br/>
+static 멤버 함수에서는 같은 static 멤버 변수 혹은 함수의 사용 및 호출만 가능하다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class A{
+	private:
+		static int a_value;
+		
+	public:
+		A(int a_value){
+			this->a_value = a_value;
+		}
+		static void Add(int n);
+		int getA(){
+			return a_value;
+		}
+};
+
+int A::a_value = 0;	// static 멤버 변수의 초기화는 main 외부에서 한다.
+void A::Add(int n) { a_value += n; }
+
+int main() {
+
+	A a1 = A(3);
+	A a2 = A(6);
+	a1.Add(10);
+	
+	cout << a1.getA() << endl;
+	
+	return 0;
+}
+```
+
+__출력 결과__
+
+<br/>
+
+> 16 <br/>
+
+<br/>
+
+16이 나온 이유는 다음과 같다. <br/>
+1. a1 선언 : a_value = 3 <br/>
+2. a2 선언 : a_value = 6 <br/>
+3. a1.Add(10) static 변수가 10 추가 되어 a_value = 16 <br/>
 
 <br/>
 <br/>
