--- a/3. 객체 지향 프로그래밍/#5. 다형성.md
+++ b/3. 객체 지향 프로그래밍/#5. 다형성.md
@@ -118,10 +118,192 @@ int main() {
 
 <br/>
 
-__출력 결과++
+__출력 결과__
 
 <br/>
 
 > Run E_clase <br/>
 
 <br/>
+<br/>
+
+## 3) 동적 바인딩(Dynamic Binding)
+
+<br/>
+
+C++ 에서 컴파일러는 함수 호출을 위해서 어느 메모리에 저장되어 있는 지 정확히 알아야 한다. <br/>
+함수 호출 시에 어느 블록에 있는 함수를 실행해야하는지 알려 주는 것을 바인딩(Binding)이라고 한다. <br/>
+
+<br/>
+
+C++에서는 함수가 오버로딩될 수 있으므로 이 작업이 조금 복잡하다. <br/>
+
+<br/>
+<br/>
+
+__정적 바인딩__
+
+<br/>
+
+대부분 함수를 호출하는 코드는 컴파일 타임에 고정된 메모리 주소로 변환한다. <br/>
+이것을 정적 바인딩(static binding) 또는 초기 바인딩(early binding)이라고 한다. <br/>
+C++에서는 가상 함수가 아닌 멤버 함수는 모두 이러한 정적 바인딩을 하게 됩니다. <br/>
+
+<br/>
+
+아래의 예시를 본다면 정적 바인딩에 대해 쉽게 이해할 수 있다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{
+	public:
+		void Run() { 
+			cout <<  "No cars!!" << endl;
+		};
+};
+
+class Sonata : public Car{
+	public:
+		void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		void Run(){
+			cout << "Run Tiguan" << endl;
+		}
+};
+
+class E_class : public Car{
+	public:
+		void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+int main() {
+
+	Car* myCar;
+	Tiguan tiguan;
+	Sonata sonata;
+	
+	myCar = &tiguan;
+	myCar->Run();
+	
+	myCar = &sonata;
+	myCar->Run();
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__ 
+
+<br/>
+
+> No Cars!! <br/>
+> No Cars!! <br/>
+
+<br/>
+
+위 처럼 멤버 함수를 가상함수로 선언하지 않는다면, C++ 컴파일러는 해당 함수를 정적으로 선언한다. <br/>
+따라서, 객체를 위와 같이 e동적으로 변경하더라도 이미 정적으로 입력된 정적 함수에 의해<br/>
+동일한 함수가 출력되는 문제가 발생한다. <
+
+<br/>
+<br/>
+
+__동적 바인딩__
+
+<br/>
+
+하지만 가상 함수의 호출은 컴파일러가 어떤 함수를 호출해야 하는지 미리 알 수 없다. <br/>
+그 이유는 가상 함수의 경우 객체를 선언할 때, 어느 함수를 호출할 지 결정되기 때문에 컴파일 타임에 해당 객체를 특정하지 못한다. <br/>
+가상함수는 런타임에 올바른 함수가 실행될 수 있도록하는 바인등을 해야한다.
+이를, 동적 바인딩(dyanmic binding) 또는 지연 바인딩(late binding)이라고 한다. <br/>
+
+<br/>
+
+앞서 구현한 Car Programming 예제를 다음과 같이 수정했다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{
+	public:
+		virtual void Run() = 0;
+};
+
+class Sonata : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run Tiguan" << endl;
+		}
+};
+
+class E_class : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+int main() {
+
+	Car* myCar;	// Car 객체의 주소값을 담는 인스턴스 (myCar) 선언
+	Tiguan tiguan;	// Tiguan 객체 선언
+	Sonata sonata;	// Sonata 객체 선언
+	
+	// tiguan 객체 동적 할당
+	myCar = &tiguan;
+	myCar->Run();
+	
+	// sonata 객체 동적 할당
+	myCar = &sonata;
+	myCar->Run();
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run Tiguan <br/>
+> Run Sonata <br/>
+
+<br/>
+
+Car 객체를 동적으로 할당하여 동적 바인딩을 활용한 예시다. <br/>
+
+<br/>
+
+동적 바인딩을 수행하기 위한 Car 객체의 인스턴스 주소값 변수 (myCar)를 선언하고, <br/>
+해당 인스턴스에 객체를 할당하여 Run()에 대한 동적 바인딩을 구현했다. <br/>
+
+<br/>
+
+
