--- a/3. 객체 지향 프로그래밍/#5. 다형성.md
+++ b/3. 객체 지향 프로그래밍/#5. 다형성.md
@@ -217,7 +217,7 @@ __출력 결과__
 
 위 처럼 멤버 함수를 가상함수로 선언하지 않는다면, C++ 컴파일러는 해당 함수를 정적으로 선언한다. <br/>
 따라서, 객체를 위와 같이 e동적으로 변경하더라도 이미 정적으로 입력된 정적 함수에 의해<br/>
-동일한 함수가 출력되는 문제가 발생한다. <
+동일한 함수가 출력되는 문제가 발생한다. 
 
 <br/>
 <br/>
@@ -228,7 +228,7 @@ __동적 바인딩__
 
 하지만 가상 함수의 호출은 컴파일러가 어떤 함수를 호출해야 하는지 미리 알 수 없다. <br/>
 그 이유는 가상 함수의 경우 객체를 선언할 때, 어느 함수를 호출할 지 결정되기 때문에 컴파일 타임에 해당 객체를 특정하지 못한다. <br/>
-가상함수는 런타임에 올바른 함수가 실행될 수 있도록하는 바인등을 해야한다.
+가상함수는 런타임에 올바른 함수가 실행될 수 있도록하는 바인등을 해야한다. <br/>
 이를, 동적 바인딩(dyanmic binding) 또는 지연 바인딩(late binding)이라고 한다. <br/>
 
 <br/>
@@ -306,4 +306,286 @@ Car 객체를 동적으로 할당하여 동적 바인딩을 활용한 예시다.
 
 <br/>
 
+__가상 함수 테이블__
+
+<br/>
+
+C++ 컴파일러는 가상함수 테이블(Virtual Function Table)을 이용해 가상함수를 작동시킨다. <br/>
+
+<br/>
+
+C++ 컴파일러는 각각의 객체마다 가상 함수 테이블을 가리키는 포인터를 저장하기 위한 숨겨진 멤버를 하나씩 추가한다. <br/>
+만약 객체에 가상 함수가 단 하나라도 있다면 해당 클래스에 대한 가상 함수 테이블을 만든다. <br/>
+이렇게 만들어진 가상 함수 테이블에 해당 클래스 객체를 위해 선언된 가상 함수의 주소가 저장된다. <br/>
+
+<br/>
+
+가상 함수를 호출하면 C++ 컴파일러는 가상 함수 테이블에 접근하여 필요한 함수의 주소를 찾아 호출한다. <br/>
+
+<br/>
+<br/>
+
+## 4) 순수 가상 함수 (Pure Virtual Function)
+
+<br/>
+
+가상 함수에는 일반 가상 함수와 순수 가상 함수 2가지가 있다. <br/>
+
+<br/>
+
+__1. 일반 가상 함수__
+
+<br/>
+
+일반 가상 함수는 파생 클래스에서 구현을 해도 되고 안해도 된다.<br/>
+따라서 파생 클래스에 가상 함수에 대한 선언이 없어도 부모 클래스를 보고 작동하게 된다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{
+	public:
+		virtual void Run() { 
+			cout <<  "No cars!!" << endl;
+		};
+};
+
+class Sonata : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		
+};
+
+class E_class : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+int main() {
+
+	Car* myCar;
+	Tiguan tiguan;
+
+	myCar = &tiguan;
+	myCar->Run();
+
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> No cars!!
+
+<br/>
+
+Tiguan 객체에는 Run() 함수에 대한 선언이 들어있지 않다. <br/>
+그렇게 때문에, 부모 클래스에 있는 가상 함수가 그대로 작동한다. <br/>
+
+<br/>
+<br/>
+
+__2. 순수 가상 함수__
+
+<br/>
+
+반면에 순수 가상 함수의 경우 반드시 객체 내에 구현되어야 한다. <br/>
+순수 가상 함수는 부모 클래스에 다음과 같이 작성 되어 있다. <br/>
+
+<br/>
+
+```c++
+virtual void Run() = 0;
+```
+
+<br/>
+
+가상 함수가 부모클래스에 위처럼 선언되었다면, 파생 클래스에는 반드시 가상 클래스에 대한 구현이 선언되어야 한다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{
+	public:
+		virtual void Run() = 0;
+};
+
+class Sonata : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Tiguan" << endl;
+		}
+};
+
+class E_class : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+int main() {
+
+	Car* myCar;
+	Tiguan tiguan;
+
+	myCar = &tiguan;
+	myCar->Run();
+
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run Tiguan <br/>
+
+<br/>
+
+만약, 순수 가상 함수가 객체에서 구현되지 않는다면 Compile Error가 발생한다. <br/>
+
+<br/>
+<br/>
+
+## 5) 추상 클래스 (Abstract Class)
+
+<br/>
+
+추상 클래스란, 하나 이상의 순수 가상 함수를 포함하는 클래스를 의미한다. <br/>
+실제로 작동하지는 않지만 파생 클래스에서 반드시 정의 되어야 하는 멤버들을 명시한다. <br/>
+이 추상 클래스의 파생 클래스에서는 반드시 함수에 대한 재정의가 필요하다. <br/>
+
+<br/>
+
+추상 클래스는 다형성 구현에 있어 가장 중요한 기능이다. <br/>
+
+<br/>
+
+__추상 클래스의 특징__
+
+<br/>
+
+- 추상 클래스에는 동작이 정의되지 않은 순수 가상 함수만 포함한다. <br/>
+- 추상 클래스는 인스턴스 선언이 불가능하다. <br/>
+- 상속 과정을 통해 파생 클래스를 만들고, 파생 클래스에서 순수 가상 함수를 모두 오버라이딩 해야 인스턴스 생성이 가능하다. <br/>
+- 포인터와 참조는 별도의 파생 클래스 선언 없이도 바로 사용 가능하다. <br/>
+
+<br/>
+<br/>
+
+__추상 클래스 예시__
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{	// 추상 클래스 
+	public:
+		virtual ~Car() {}		// 추상 클래스 소멸자 
+		virtual void Run() = 0; // 순수 가상 함수
+};
+
+class Sonata : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Tiguan" << endl;
+		}
+};
+
+class E_class : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+int main() {
+
+	//Car myCar;		// 추상 클래스 선언 불가능
+	Car* myCar;			// 추상 클래스 참조 가능
+	Tiguan tiguan;
+	myCar = &tiguan;
+	myCar->Run();
+
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run Tiguan <br/>
+
+<br/>
+
+위의 예시 처럼 추상 클래스는 직접적은 선언이 불가능하고, 참조를 통해 선언해야 한다. <br/>
+
+<br/>
+<br/>
+
+__추상 클래스 제약 사항__
+
+<br/>
+
+추상 클래스의 경우 파생 클래스로의 선언을 강제한다. <br/>
+상속의 개념과도 겹치는 데, 계층 구조가 있는 클래스 구조에서 상위 클래스를 구현하지 않는 경우에만 사용한다.<br/>
+
+<br/>
+
+이러한 특성으로 인해 추상클래스 구현을 위해선 아래 사항들이 제약된다. <br/>
+
+<br/>
+
+- 변수 또는 멤버 변수 <br/>
+- 함수의 전달되는 인수 타입 <br/>
+- 함수의 반환 타입 <br/>
+- 명시적 타입 변환의 타입 <br/>
+
+<br/>
+
+만약, main 함수에서 위와 같은 사항들을 실행하는 경우 Compile Error가 발생한다. <br/>
 
