--- a/3. 객체 지향 프로그래밍/#6. 상속.md
+++ b/3. 객체 지향 프로그래밍/#6. 상속.md
@@ -25,3 +25,107 @@
 클래스 상속의 개념을 이해하기 위해 앞서 사용했던 Car의 개념을 확장해보자. <br/>
 
 <br/>
+
+아래와 같이 클래스 구조를 이루고 있다고 생각해보자. <br/>
+
+<br/>
+
+![](https://github.com/adrian0220/Study_cpp/blob/main/_src/inheritance.GIF)
+
+<br/>
+
+이 클래스의 구조를 살펴보면, 우선 Car라는 최상위 클래스가 존재한다. <br/>
+그리고 그 아래 Car의 자식 클래스이자 파생 클래스인 Sonata, Tiguan, E_class가 존재한다. <br/>
+마지막으로 E_class의 아래에 E_class2가 또 존재한다. <br/>
+
+<br/>
+
+클래스 상속이란, 상위 클래스에 정의 되어 있는 모든 클래스의 멤버 변수와 함수를 물려받아 새로운 클래스를 만드는 것을 의미한다. <br/>
+
+<br/>
+
+__클래스 상속의 장점__
+
+<br/>
+
+클래스를 상속을 통해 구현한다면 아래와 같은 장점이 존재한다. <br/>
+
+<br/>
+
+- 기존에 작성된 클래스의 재활용이 가능하다. <br/>
+- 여러 클래스가 공통적인 부분을 포함하고 있는 경우 상위 클래스를 미리 작성해 중복 부분을 제거한다.<br/>
+
+<br/>
+<br/>
+
+__클래스 상속 용어__
+
+<br/>
+
+- 기초 클래스(Base Class) : 클래스 단계 중 최상위에 있는 클래스. 하위 클래스는 모두 기초 클래스의 변수를 가진다.<br/>
+- 부모 클래스(Parent Class), 상위 클래스(Super Class) : 특정 클래스가 상속을 받아 변수를 공유하는 상위 클래스 <br/>
+- 파생 클래스(Derived Class), 자식 클래스(Child Class), 하위 클래스(Sub Class) : 상속을 통해 생성되는 하위 클래스 <br/>
+
+<br/>
+
+이를 통해 위에 있는 계층 구조를 작성하게 되면 아래와 같이 구현된다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{
+	public:
+		virtual void Run() = 0;
+};
+
+class Sonata : public Car{
+	public:
+		virtual void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run Tiguan" << endl;
+		}
+};
+
+class E_class : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+class E_class2 : public E_class {
+	public:
+		virtual void Run(){
+			cout << "Run E_class2" << endl;
+		}
+};
+
+
+int main() {
+
+	Car* car1 = new Sonata;
+	Car* car2 = new Tiguan;
+	Car* car3 = new E_class2;
+	
+	car3->Run();
+	
+	return 0;
+}
+```
+
+<br/>
+<br/>
+
+# 2) 파생 클래스
+
+<br/>
