--- a/3. 객체 지향 프로그래밍/#6. 상속.md
+++ b/3. 객체 지향 프로그래밍/#6. 상속.md
@@ -129,3 +129,144 @@ int main() {
 # 2) 파생 클래스
 
 <br/>
+
+파생 클래스란 상위 클래스의 모든 속성을 물려받아 생성된 클래스이다. <br/>
+
+<br/>
+
+상속은 꼭 하나의 클래스로부터 받을 필요는 없다. <br/>
+
+<br/>
+
+- 단일 상속 (Single Inheritance) : 파생 클래스가 상속 받는 상위 클래스가 하나 <br/>
+- 다중 상속 (Multiple Inheritance) : 파생 클래스가 상속 받는 상위 클래스가 여러개 <br/>
+
+<br/>
+
+__파생 클래스의 특징__
+
+<br/>
+
+
+C++에서 파생 클래스는 다음과 같은 특징을 가지고 있다. <br/>
+
+<br/>
+
+- 파생 클래스는 반드시 자신만의 생성자를 작성해야 한다. <br/>
+- 파생 클래스에는 기초 클래스의 접근할 수 있는 모든 멤버 변수들이 저장된다. <br/>
+- 파생 클래스는 기초 클래스의 접근할 수 있는 모든 멤버 함수를 사용할 수 있다. <br/>
+- 파생 클래스에는 필요한 만큼 멤버를 추가할 수 있다. <br/>
+
+<br/>
+
+__파생 클래스의 선언__
+
+<br/>
+
+파생 클래스의 경우 아래와 같이 선언 가능하다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Car{
+	private:
+		int number;
+		string company;
+	
+	public:
+		Car(int number_, const string& company_);
+		virtual void Run() = 0;
+		int getNumber(){
+			return number;
+		}
+};
+
+class Sonata : public Car{
+	private:
+		int series;
+	
+	public:
+		Sonata(int number, const string& company, int series_);
+		virtual void Run(){
+			cout <<  "Run Sonata" << endl;
+		}
+};
+
+class Tiguan : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run Tiguan" << endl;
+		}
+};
+
+class E_class : public Car{
+	public:
+		virtual void Run(){
+			cout << "Run E_class" << endl;
+		}
+};
+
+class E_class2 : public E_class {
+	public:
+		virtual void Run(){
+			cout << "Run E_class2" << endl;
+		}
+};
+
+Car::Car(int number_, const string& company_){
+	number = number_;
+	company = company_;
+};
+
+Sonata::Sonata(int number_, const string& company_, int series_) : Car(number_, company_){
+	series = series_;
+};
+
+int main() {
+
+	Car* car1 = new Sonata(5885, "Hyundae", 3);
+	
+	cout << car1->getNumber() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 5885 <br/>
+
+<br/>
+
+위와 같이 생성자의 상속도 가능하다. <br/>
+또한 파생 클래스의 생성자에는 별도로 다시 변수를 선언하지 않아도 된다. <br/>
+
+<br/>
+
+__파생 클래스의 객체 생성 순서__
+
+<br/> 
+
+C++에서 파생 클래스의 객체가 생성되는 순서는 다음과 같다. <br/>
+
+<br/>
+ 
+- 파생 클래스의 객체를 생성하면, 프로그램은 제일 먼저 기초 클래스의 생성자를 호출한다. <br/>
+- 기초 클래스 생성사 호출 시 기초 클래스로부터 상속받은 멤버 변수의 초기화를 진행한다. <br/>
+- 파생 클래스의 생성자가 호출된다. <br/>
+- 파생 클래스의 수명이 다하면, 먼저 파생 클래스의 소멸자가 호출되고 그 다음 기초 클래스의 소멸자가 호출된다. <br/>
+
+<br/>
+<br/>
+
+## 3) 멤버 함수 오버라이딩
+
+<br/>
