--- a/3. 객체 지향 프로그래밍/#6. 상속.md
+++ b/3. 객체 지향 프로그래밍/#6. 상속.md
@@ -270,3 +270,116 @@ C++에서 파생 클래스의 객체가 생성되는 순서는 다음과 같다.
 ## 3) 멤버 함수 오버라이딩
 
 <br/>
+ 
+- 함수 오버로딩 (Function Overloading) : 같은 함수명 / 다른 파라미터 <br/>
+- 함수 오버라이딩 (Function Overriding) : 같은 함수명 무시하고 새로운 함수 정의 <br/>
+
+<br/>
+
+멤버 함수 오버라이딩이란 기초 클래스로부터 상속 받은 멤버 함수를 무시하고, <br/>
+파생 클래스에서 새롭게 함수를 재정의하는 것을 의미한다. <br/>
+
+<br/>
+
+멤버 함수 오버라이딩은 파생클래스의 함수를 재정의 하는 것으로 기존 원형은 기초 클래스와 반드시 동일해야 한다. <br/>
+
+<br/>
+
+### 파생 클래스 오버라이딩
+
+<br/>
+
+```c++
+class Car{
+	private:
+		int number;
+		string company;
+	
+	public:
+		Car(int number_, const string& company_);
+		void Run(){
+			cout << "Empty Cars" << endl;
+		}
+};
+
+class Sonata : public Car{
+	private:
+		int series;
+	
+	public:
+		Sonata(int number, const string& company, int series_);
+		void Run(){
+			cout << "Run Sonata" << endl;
+		}
+};
+```
+
+<br/>
+
+위의 예제에서 보면 기초 클래스 Car에 Run() 함수가 정의되어 있다.<br/>
+그리고 Car의 파생 클래스인 Sonata에 Run() 함수에 대한 재정의가 되어있다.<br/>
+Sonata 클래스의 경우 Car클래스에 있는 모든 멤버 함수를 상속받게 되는데,<br/>
+파생클래스에서 함수를 재정의하게 된다면, 상속 클래스의 함수를 무시하고 파생클래스 내의 정의대로 함수를 호출한다.<br/>
+
+<br/>
+
+이를 멤버 함수 오버라이딩이라고 한다. <br/>
+
+<br/>
+
+```c++
+int main() {
+	Sonata* car1 = new Sonata(5885, "Hyundae", 3);
+	car1->Run();
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run Sonata <br/>
+
+<br/>
+
+해당 프로그램을 실행하면 Sonata 함수에 오버라이딩 된 결과가 출력된다. <br/>
+
+<br/>
+<br/>
+
+### 파생 클래스 오버라이딩
+
+<br/>
+
+```c++
+class Car{
+	private:
+		int number;
+		string company;
+	
+	public:
+		Car(int number_, const string& company_);
+		virtual void Run();
+};
+
+class Sonata : public Car{
+	private:
+		int series;
+	
+	public:
+		Sonata(int number, const string& company, int series_);
+		void Run();
+};
+
+
+void Car:: Run(){
+	cout << "Empty Cars" << endl;
+}
+
+void Sonata:: Run(){
+	cout << "Run Sonata" << endl;
+}
+```
