--- a/3. 객체 지향 프로그래밍/#6. 상속.md
+++ b/3. 객체 지향 프로그래밍/#6. 상속.md
@@ -285,7 +285,7 @@ C++에서 파생 클래스의 객체가 생성되는 순서는 다음과 같다.
 
 <br/>
 
-### 파생 클래스 오버라이딩
+### 3-1) 파생 클래스 오버라이딩
 
 <br/>
 
@@ -350,7 +350,11 @@ __출력 결과__
 <br/>
 <br/>
 
-### 파생 클래스 오버라이딩
+### 3-2) 가상 함수 오버라이딩
+
+<br/>
+
+앞서 배운 가상 함수의 개념 역시 오버라이딩의 방식을 따른 것이다. <br/>
 
 <br/>
 
@@ -383,3 +387,255 @@ void Sonata:: Run(){
 	cout << "Run Sonata" << endl;
 }
 ```
+
+<br/>
+
+Car 클래스에 Run() 함수를 가상 함수로 정의 했고,<br/>
+Sonata 클래스에 이를 재정의했다. <br/>
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+앞서 실행한 main 함수를 그대로 실행하면 아래의 결과가 나온다. <br/>
+
+<br/>
+
+> Run Sonata <br/>
+
+<br/>
+<br/>
+
+### 3-3) 멤버 함수 오버라이딩
+
+<br/>
+
+일반적인 경우 위의 예시처럼 멤버 함수를 오버라이딩한다면, 파생 클래스에서 재정의한 함수가 출력된다.<br/>
+
+<br/>
+
+하지만 포인터를 통해 클래스를 선언하게 되는 경우 아래와 같은 문제가 발생한다. <br/>
+
+```c++
+class Car{
+	private:
+		int number;
+		string company;
+	
+	public:
+		Car(int number_, const string& company_);
+		void Run();
+};
+
+class Sonata : public Car{
+	private:
+		int series;
+	
+	public:
+		Sonata(int number, const string& company, int series_);
+		void Run();
+};
+
+void Car:: Run(){
+	cout << "Empty Cars" << endl;
+}
+
+void Sonata:: Run(){
+	cout << "Run Sonata" << endl;
+}
+
+int main() {
+	Car* car1 = new Sonata(5885, "Hyundae", 3);
+	car1->Run();
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Empty Cars <br/>
+
+<br/>
+
+위와 같이 클래스를 Car 포인터를 사용해 정의하게 된다면, 아래와 같이 멤버 함수가 오버라이딩 되지 않는 문제가 발생한다. <br/>
+
+<br/>
+
+위 예제에서 car1 변수는 Car에 대한 포인터 변수로 정의되었다. <br/>
+이 경우 car1에는 Car객체의 주소값을 대입할 수 있고,<br/>
+대입된 객체는 멤버 접근 연산자(->)를 통해 Car객체에 정의되어 있는 함수를 호출한다. <br/>
+ 
+<br/>
+
+이떄 C++ 컴파일러는 객체가 아닌 포인터의 타입을 기준으로 함수를 호출하기 떄문에 <br/>
+Sonata가 아닌 Car 객체에 있는 함수를 호출한다. <br/>
+
+<br/>
+
+이를 해결하기 위해서, 가상 함수를 사용한다. <br/>
+
+<br/>
+
+```c++
+class Car{
+	private:
+		int number;
+		string company;
+	
+	public:
+		Car(int number_, const string& company_);
+		virtual void Run();
+};
+
+class Sonata : public Car{
+	private:
+		int series;
+	
+	public:
+		Sonata(int number, const string& company, int series_);
+		void Run();
+};
+
+void Car:: Run(){
+	cout << "Empty Cars" << endl;
+}
+
+void Sonata:: Run(){
+	cout << "Run Sonata" << endl;
+}
+
+int main() {
+	Car* car1 = new Sonata(5885, "Hyundae", 3);
+	car1->Run();
+	return 0;
+}
+```
+
+이처럼 가상 함수를 사용하게 된다면 문제가 해결된다. <br/>
+
+<br/>
+<br/>
+
+## 4) 다중 상속
+
+<br/>
+
+앞서 설명했듯이, 상속은 반드시 하나의 클래스에서만 받을 필요는 없다. <br/>
+위의 예제 중에서 새로운 기초 클래스를 추가해보자. <br/>
+
+<br/>
+
+__기초 클래스 SUV__
+
+<br/>
+
+```c++
+class SUV{
+	private:
+		int wheel_drive;
+	
+	public:
+		SUV(int wheel_drive_);
+		void set_wheel_drive(int wheel){
+			wheel_drive = wheel;
+		}
+		int get_wheel_drive(){
+			return wheel_drive;
+		}
+};
+
+SUV::SUV(int wheel_drive_){
+	wheel_drive = wheel_drive_;
+};
+```
+
+<br/>
+
+SUV라는 새로운 기초 클래스를 다음과 같이 정의했다. <br/>
+
+<br/>
+
+이제, Tiguan 클래스를 Car와 SUV 두개의 클래스의 다중 상속을 다음과 같이 정의한다.<br/> 
+
+<br/>
+
+```c++
+class Tiguan : public Car, public SUV{
+	private:
+		int series;
+		
+	public:
+		Tiguan(int number, const string& company, int wheel_drive_, int series_);
+		void Run(){
+			cout << "Run Tiguan" << endl;
+		}
+};
+
+Tiguan::Tiguan(int number_, const string& company_, int wheel_drive_, int series_) : Car(number_, company_), SUV(wheel_drive_){
+	series = series_;
+};
+```
+
+<br/>
+
+위의 예제는 Tiguan 클래스를 2개의 기초 클래스 (Car, SUV)를 통해 상속을 받은 것이다. <br/>
+
+<br/>
+
+다중 상속 파생 클래스는 아래와 같이 선언 및 동작이 가능하다.<br/>
+
+<br/>
+
+```c++
+int main() {
+
+	Tiguan* car1 = new Tiguan(5885, "Volkswagen", 4, 2021);
+	car1->Run();
+	car1->set_wheel_drive(2);
+	cout << car1->get_wheel_drive() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+위 함수를 출력하면 아래와 같이 나온다. <br/>
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run Tiguan <br/>
+> 2 <br/>
+
+<br/>
+<br/>
+
+위의 예제처럼 다중 상속을 활용한다면 파생 클래스에서 더 많은 동작을 구현할 수 있다는 장점이 있다.<br/>
+그러나 실제로 많이 사용하지 않는데 아래와 같은 위험성이 존재한다.<br/>
+
+<br/>
+
+__다중 상속 구현 시 주의점__
+
+<br/>
+
+- 기초 클래스가 여러개일 경우 기초 클래스에 같은 이름의 멤버가 존재할 수 있다. <br/>
+- 하나의 클래스를 간접적으로 두 번 이상 상속 받을 가능성이 존재한다. <br/>
+- 가상 클래스가 아닌 기초 클래스를 다중으로 상속하면, 기초 클래스 타입의 포인터로 파생 클래스를 가리킬 수 업다.<br/>
+(C++ 컴파일러는 여러개의 기초 클래스 중 어떤 걸 바라봐야 할지 알 수 없다.) <br/>
+
+<br/>
+
+위와 같은 문제로 다중 상속은 잘 사용하지 않는다. <br/>
+
+<br/>
