Update #7. is-a 및 has-a 관계.md

--- a/3. 객체 지향 프로그래밍/#7. is-a 및 has-a 관계.md
+++ b/3. 객체 지향 프로그래밍/#7. is-a 및 has-a 관계.md
@@ -111,33 +111,31 @@ __has-a 관계 예제 (E-class is Car)__
 
 <br/>
 
-
-#include <iostream>
-#include <string>
-using namespace std;
-
+```c++
 class Guarantee{
 	private:
 		int years;
 	public:
-		Car(int years_);
+		Guarantee(int years_);
+		int get_years(){
+			return years;
+		}
 };
 
-class E_class : public Car{
+class E_class : public Guarantee{
 	private:
 		int series;
 	
 	public:
-		E_class (int series_, int years__);
+		E_class (int years__, int series_);
 		void Run();
 };
 
-Guarantee::Guarantee(int number_, const string& company_){
-	number = number_;
-	company = company_;
+Guarantee::Guarantee(int years_){
+	years = years_;
 };
 
-E_class::E_class(int number_, const string& company_, int series_) : Car(number_, company_){
+E_class::E_class(int years_, int series_) : Guarantee(years_){
 	series = series_;
 };
 
@@ -147,8 +145,138 @@ void E_class:: Run(){
 
 int main() {
 
-	E_class* car1 = new E_class(5885, "Mercedes-Benz", 2021);
+	E_class* car1 = new E_class(2025, 3);
 	car1->Run();
+	cout << car1->get_years() << endl;
 	
 	return 0;
 }
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run E_class <br/>
+> 2025 <br/>
+
+<br/>
+
+위와 같은 방식으로 has-a 관계 구현이 가능하다. <br/>
+
+<br/>
+<br/>
+
+## is-a VS has-a
+
+<br/>
+
+개발자는 상속 관계를 만드는 데 있어 is-a와 has-a 중에서 관계를 선택해야 한다. <br/>
+두 관계는 아래의 장단점을 가지고 있다. <br/>
+
+<br/>
+
+__is-a 관계__
+
+<br/>
+
+- is-a 관계에서는 상속이 밀접하게 결합된다.<br/>
+- 기초 혹은 파생 클래스가 변경되면 둘다 같이 코드가 손상 될 위험성이 존재한다.<br/>
+- 반대로 밀접한 관계로 묶여있어서 안정적인 클래스 계층 구조를 만들 수 있다. <br/>
+
+<br/>
+
+__has-a 관계__
+
+<br/>
+
+- has-a 관계는 상속이 느슨하게 결합된다. <br/>
+- 파생 클래스나 기초 클래스가 변경되어도 상호간의 코드 손상 가능성이 적다. <br/>
+- 하지만, 클래스간의 결합이 약하기 떄문에 클래스 계층 구조가 복잡해질 위험이 있다.<br/>
+
+<br/>
+
+위와 같은 장단점이 있으므로 개발자는 신중하게 상속 관계를 만들어야 한다. <br/>
+
+<br/>
+<br/>
+
+__상속 관계 설정 예제__
+
+<br/>
+
+앞서 설명한 has-a관계의 경우 잘못 설정하면 클래스 계층 구조가 복잡해진다. <br/>
+따라서 위와 같이 Car라는 객체가 Guarantee를 소유하는 has-a관계라면 아래와 같이 개발하는 방법도 있다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <string>
+using namespace std;
+
+class Guarantee{
+	private:
+		int years;
+	public:
+		Guarantee(int years_);
+		int get_years(){
+			return years;
+		}
+};
+
+class E_class{
+	private:
+		Guarantee* guarantee;
+		int series;
+	
+	public:
+		E_class (int years__, int series_);
+		void Run();
+		void get_Guarantee();
+};
+
+Guarantee::Guarantee(int years_){
+	years = years_;
+};
+
+E_class::E_class(int years_, int series_){
+	guarantee = new Guarantee(years_);
+	series = series_;
+};
+
+void E_class:: Run(){
+	cout << "Run E_class" << endl;
+}
+
+void E_class:: get_Guarantee(){
+	cout << guarantee->get_years() << endl;
+}
+
+int main() {
+
+	E_class* car1 = new E_class(2025, 3);
+	car1->Run();
+	car1->get_Guarantee();
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Run E_class <br/>
+> 2025 <br/>
+
+<br/>
+
+위 처럼 E-class 객체가 Guarantee 객체를 소유하는 Has-a 관계라면 <br/>
+멤버 변수에 클래스 객체를 선언해서 설정할 수 있다. <br/>
+
+<br/>
