Update #8. 템플릿 클래스.md

--- a/3. 객체 지향 프로그래밍/#8. 템플릿 클래스.md
+++ b/3. 객체 지향 프로그래밍/#8. 템플릿 클래스.md
@@ -233,3 +233,358 @@ __템플릿 클래스의 사용__
 
 <br/>
 
+템플릿 클래스는 다음과 같은 방식으로 선언할 수 있다.<br/>
+
+<br/>
+
+```c++
+template <typename T>
+class Data
+{
+private:
+    T data_;
+
+public:
+    Data(T dt);
+    T get_data();
+};
+```
+
+<br/>
+
+템플릿 클래스는 template 키워드를 통해 선언 가능하다. <br/>
+typename T를 통해 변수 타입에 대한 정보가 들어간다. <br/>
+
+<br/>
+
+아래는 템플릿 클래스에 있는 함수에 대한 선언이다. <br/>
+
+<br/>
+
+```c++
+template <typename T>
+Data<T>::Data(T dt)
+{
+	data_ = dt;
+}
+
+template <typename T>
+T Data<T>::get_data()
+{
+	return data_;
+}
+```
+
+<br/>
+
+템플릿 클래스에 대한 선언과 함수에 대한 정의가 끝나면 main 함수를 통해 실행 가능하다. <br/>
+
+<br/>
+
+```c++
+int main(void)
+{
+	Data<string> str_data("String Class");
+	Data<int> int_data(77);
+	
+	cout << str_data.get_data() << endl;	
+	cout << int_data.get_data() << endl;
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> String Class
+> 77
+
+<br/>
+
+객체에 대한 인스턴스 선언 시, <> 기호 안에 명시적으로 클래스 타입에 대해 선언한다. <br/>
+컴파일러는 해당 기호 안에 있는 변수를 확인해 인스턴스를 생성한다.<br/>
+
+<br/>
+
+__템플릿 클래스의 특징__
+
+<br/>
+
+- 1. 하나 이상의 템플릿 인수를 가지는 클래스 템플릿을 선언할 수 있습니다. <br/>
+
+<br/>
+
+```c++
+template <typename T, int i> // 두 개의 템플릿 인수를 가지는 클래스 템플릿을 선언함.
+class X
+{ ... }
+```
+
+<br/>
+
+- 2. 클래스 템플릿에 디폴트 템플릿 인수를 명시할 수 있습니다. <br/>
+
+<br/>
+
+```c++
+template <typename T = int, int i> // 디폴트 템플릿 인수의 타입을 int형으로 명시함.
+class X
+{ ... }
+```
+
+<br/>
+
+- 3. 클래스 템플릿를 기초 클래스로 하여 상속할 수 있습니다. <br/>
+
+<br/>
+
+```c++
+template <typename Type>
+class Y : public X <Type> // 클래스 템플릿 X를 상속받음.
+{ ... }
+```
+
+<br/>
+<br/>
+
+### 2-3) 중첩 클래스 (Nested Class)
+
+<br/>
+
+C++는 클래스를 중첩해 선언 가능하다. <br/>
+
+<br/>
+
+중첩 클래스는 클래스 내부에 하나의 클래스를 더 선언해서 만들 수 있다. <br/>
+
+<br/>
+
+__중첩 클래스의 특징__
+
+<br/>
+
+- 중첩 클래스는 외부 클래스의 멤버 변수처럼 활동한다. (물론, 외부 클래스의 멤버 변수로 선언해줘야 한다.) <br/>
+- 내부 클래스에 대한 별도 선언은 가능하나, 이 경우 외부 클래스 위치를 반드시 선언해주어야 한다 (:: 키워드) <br/>
+
+<br/>
+
+다음은 중첩 클래스에 대한 선언 예시다. <br/>
+
+<br/>
+
+- 외부 클래스 : Car <br/>
+- 내부 클래스 : Company <br/>
+
+<br/>
+
+```c++
+class Car
+{
+public:
+	Car(int number, string name);		
+	int getNumber();
+	class Company
+	{
+	public:
+		Company(string name);
+		string getCompany();
+	private:
+		string name;	
+	};
+	Company company;
+private:
+	int number;
+};
+```
+
+<br/>
+
+- 외부클래스 Car 정의 안에 내부클래스 Company가 정의되어 있다. <br/>
+- 외부클래스 Car의 멤버 변수에 Company가 선언되어 있다.<br/>
+
+<br/>
+
+이제 위 중첩클래스에 선언된 함수와 생성자에 대해 선언하자. <br/>
+
+<br/>
+
+__외부클래스 Car 생성자__
+
+<br/>
+
+```c++
+Car::Car(int number_, string name_) : company(name_) {
+	number = number_;
+}
+```
+
+<br/>
+
+- 외부 클래스 Car에 대해 필요한 변수 number와 company 선언에 필요한 변수 name을 동시에 받는다.<br/>
+- 외부 클래스 생성자에서 바로 내부 클래스를 선언하게 하려면, 위와 같이 (:)를 사용해 생성자를 호출 한다. <br/>
+
+<br/>
+
+__내부클래스 Company 생성자__
+
+<br/>
+
+```c++
+Car::Company::Company(string name_){
+	name = name_;
+}
+```
+
+<br/>
+
+- 내부 클래스에 대한 선언자이다.<br/>
+- 반드시 Car:: 를 명시하여 해당 중첩 클래스의 위치를 컴파일러에게 알려주어야 한다.<br/>
+
+<br/>
+
+나머지 함수들은 아래와 같은 방법으로 선언 가능하다.<br/>
+
+```c++
+int Car::getNumber(){
+	return number;
+}
+
+string Car::Company::getCompany(){
+	return name;
+}
+```
+
+<br/>
+
+이제 선언된 클래스와 함수를 가지고 실행해보자. <br/>
+
+<br/>
+
+```c++
+int main(void)
+{
+	Car car(33, "Audi");
+	Car::Company company2("Toyota");
+	
+	cout << car.getNumber() << endl;
+	cout << car.company.getCompany() << endl;
+	cout << company2.getCompany() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__실행 결과__
+
+<br/>
+
+> 33 <br/>
+> Audi <br/>
+> Toyota <br/>
+
+<br/>
+
+위의 코드에서 볼 수 있듯이, 내부 클래스를 단독으로 선언할 수도 있다. (company2) <br/>
+그러나 이 경우에도 반드시 외부 클래스에 대한 위치를 명시해야 한다. (Car::Company) <br/>
+
+<br/>
+<br/>
+
+### 2-4) 중첩 클래스 템플릿 (Nested Class Template)
+
+<br/>
+
+중첩 클래스 역시 템플릿을 통해 만들 수 있다.<br/>
+
+<br/>
+
+중첩 클래스 템플릿은 기존 중첩 클래스와 동일하게 클래스 상단에서 template 키워드를 통해 선언 가능하다.<br/>
+
+<br/>
+
+```c++
+template <typename T>
+class X
+{
+    template <typename U>
+    class Y
+    {
+        ...
+    }
+    ...
+    }
+}
+```
+
+<br/>
+
+중첩 클래스 템플릿의 예제는 아래와 같다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T>
+class Outer
+{
+public:
+	template <typename U>
+	class Inner
+	{
+	public:
+		Inner(U inner_data);
+		U getInData();
+	private:
+		U inner_data;	
+	};
+	Outer(T outer_data);		
+	T getOutData();
+	
+private:
+	T outer_data;
+};
+
+template <typename T>
+Outer<T>::Outer(T outer_data_) {
+	outer_data = outer_data_;
+}
+
+template <typename T>
+T Outer<T>::getOutData(){
+	return outer_data;
+}
+
+template <typename T>
+template <typename U>
+Outer<T>::Inner<U>::Inner(U inner_data_){
+	inner_data = inner_data_;
+}
+
+template <typename T>
+template <typename U>
+U Outer<T>::Inner<U>::getInData(){
+	return inner_data;
+}
+
+int main(void)
+{
+	Outer<int> a(33);
+	cout << a.getOutData() << endl;
+	
+	Outer<int>::Inner<string> b("Audi");
+	cout << b.getInData() << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+
