Update #8. 템플릿 클래스.md

--- a/3. 객체 지향 프로그래밍/#8. 템플릿 클래스.md
+++ b/3. 객체 지향 프로그래밍/#8. 템플릿 클래스.md
@@ -587,4 +587,182 @@ int main(void)
 
 <br/>
 
+__실행 결과__
+
+<br/>
+
+> 33 <br/>
+> Audi <br/>
+
+<br/>
+<br/>
+
+### 2-5) 명시적 특수화(Explicit Specialization)
+
+<br/>
+
+명시적 특수화는 특정한 변수 타입에 대한 템플릿 클래스 선언은 별도로 진행한다. <br/>
+
+<br/>
+
+아래 함수는 템플릿 클래스 Data에 Double형을 입력한 경우 실행되는 별도의 클래스다. <br/>
+
+<br/>
+
+```c++
+template <typename T>
+class Data
+{
+private:
+	T data_;
+public:
+	Data(T dt);
+	T get_data();
+};
+
+template <> class Data<double> 
+{
+private:
+	double data_;
+public:
+	Data(double dt) { data_ = dt; }
+	double get_data()
+	{
+		cout << "Type is Double" << endl;
+		return data_;
+	}
+};
+```
+
+<br/>
+
+만약 Data 클래스를 double형으로 선언하게 된다면, <br/>
+아래 템플릿 클래스 안에 있는 형태로 선언된다. <br/>
+
+<br/>
+
+템플릿 함수의 경우 위와 동일하기 떄문에 생략하도록 하겠다. <br/>
+
+<br/>
+
+```c++
+int main(void)
+{
+	Data<string> str_data("data");
+	Data<double> double_data(3.14);
+	
+	cout << str_data.get_data() << endl;	
+	cout << double_data.get_data() << endl;
+	return 0;
+}
+```
+
+<br/>
+
+첫번쨰 선언한 str_data의 경우 템플릿 클래스의 변수 타입이 String이다. <br/>
+두번째 선선한 double_data의 경우 템플릿 클래스의 변수 타입이 Double이다. <br/>
+이 경우, 기존에 있는 선언이 아닌 double형 명시적 특수화 선언에 따라 호출된다. <br/>
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> data <br/>
+> Type is Double <br/>
+> 3.14 <br/>
+
+<br/>
+<br/>
+
+### 2-6) 부분 특수화(Partial Specialization)
+
+<br/>
+
+만약 템플릿 변수가 2개 이상이고, 그 중에서 하나에 대해서만 특수화 하는 방법도 존재한다.<br/>
+
+<br/>
+
+만약, Data 템플릿이 2개의 템플릿 변수를 받는 객체이고 (Data<T1, T2>) <br/>
+그 중에서 <T1, double> 경우에 한해 별도로 특수화를 진행한다면 아래와 같이 구현할 수 있다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T1, typename T2>
+class Data
+{
+private:
+	T1 data1_;
+	T2 data2_;
+	
+public:
+	Data(T1 dt1, T2 dt2);
+	void get_data();
+};
+
+template <typename T1> class Data<T1, double> 
+{
+private:
+	T1 data1_;
+	double data2_;
+	
+public:
+	Data(T1 dt1, double dt2) { 
+		data1_ = dt1; 
+		data2_ = dt2;
+		
+	}
+	void get_data()
+	{
+		cout << "data 1 = " << data1_ << endl;
+		cout << "Data 2 is Double" << endl;
+		cout << "data 2 = " << data2_ << endl;
+	}
+};
+
+template <typename T1, typename T2>
+Data<T1, T2>::Data(T1 dt1, T2 dt2)
+{
+	data1_ = dt1;
+	data2_ = dt2;
+}
+
+template <typename T1, typename T2>
+void Data<T1, T2>::get_data()
+{
+	cout << "data 1 = " << data1_ << endl;
+	cout << "data 2 = " << data2_ << endl;
+}
+
+
+int main(void)
+{
+	Data<int, string> first_data(11, "Data");
+	Data<string, double> second_data("Something", 3.14);
+	
+	first_data.get_data();	
+	second_data.get_data();
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> data 1 = 11 <br/>
+> data 2 = Data <br/>
+> data 1 = Something <br/>
+> Data 2 is Double <br/>
+> data 2 = 3.14 <br/>
+
+<br/>
+
 
